# appdisk

./: Cargo.toml  Dockerfile  README.md  install.sh
src/: app.rs  main.rs  scanner.rs  ui.rs
