[package]
name = "appdisk"
version = "0.1.0"
edition = "2021"
description = "Analisador de uso de disco interativo"
authors = ["Alan Sposito <spositoalan@gmail.com>"]
license = "MIT"
repository = "https://github.com/sposito88/appdisk"
keywords = ["disk", "analyzer", "tui", "storage"]
categories = ["command-line-utilities"]

[package.metadata.deb]
maintainer = "Alan Sposito <spositoalan@gmail.com>>"
copyright = "2025, Alan Sposito <spositoalan@gmail.com>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/appdisk", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/appdisk/README", "644"],
]

[dependencies]
walkdir = "2.4"
rayon = "1.8"
crossterm = "0.27"
ratatui = { version = "0.26", features = ["all-widgets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cargo-deb = "1.44.0" 